Revision history for Async::IPC

          - Imported code from App::MCP

0.1.1     2014-10-16 12:59:44
          - Added project files to master branch
